update notebooks for jupyter book

--- a/demos/BEM_Laplace_Capacitor.ipynb
+++ b/demos/BEM_Laplace_Capacitor.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "979ea90d-25a0-4090-afee-8c10b3036030",
+   "id": "1d27d62d-c070-4f9f-ae4c-3f8e4c87e8cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,10 +17,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "77cd6fe6-b9ab-4c67-b006-516464d1e243",
+   "metadata": {},
+   "source": [
+    "**keys**: Plate Capacitor, Laplace equation, Dirichlet data, exterior bvp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "beea4d31-748e-4abc-86e7-df3a1a980917",
    "metadata": {},
    "source": [
-    "BEM Laplace Capacitor\n",
+    "Laplace BEM Plate Capacitor\n",
     "=============="
    ]
   },
@@ -32,9 +40,9 @@
     "We consider a plate capacitor problem and solve it with a BEM. The setting and notation looks like this:\n",
     "\n",
     "\n",
-    "|  |  |  |\n",
-    "| -|--|- |\n",
-    "| $$\\begin{array}{rcl l} - \\Delta u &=& 0, \\quad &\\mathrm{in} \\; \\Omega^c \\,, \\\\[1ex]  \\gamma_0 u  &=&  m\\,, & \\mathrm{on}\\;\\Gamma\\,,  \\\\[1ex] \\lim\\limits_{\\|x\\| \\to \\infty} u(x) &=& \\mathcal O\\left( \\displaystyle{ \\frac{1}{\\|x\\|} }\\right)\\,, & \\|x\\|\\to \\infty \\,. \\end{array} $$  | $\\quad\\quad\\quad$  | ![](resources/BEM_Capacitor.png)  |"
+    "|  |  |\n",
+    "| :-:|:-: |\n",
+    "| $ \\left\\{ \\begin{array}{rcl l} - \\Delta u &=& 0, \\quad &\\mathrm{in} \\; \\Omega^c \\,, \\\\[1ex]  \\gamma_0 u  &=&  m\\,, & \\mathrm{on}\\;\\Gamma\\,,  \\\\[1ex] \\lim\\limits_{\\|x\\| \\to \\infty} u(x) &=& \\mathcal O\\left( \\displaystyle{ \\frac{1}{\\|x\\|} }\\right)\\,, & \\|x\\|\\to \\infty \\,. \\end{array} \\right. \\quad\\quad\\quad$  | ![](resources/BEM_Capacitor.png)  |"
    ]
   },
   {
@@ -69,9 +77,9 @@
    "outputs": [],
    "source": [
     "order = 3\n",
-    "fesH1 = H1(mesh, order=order, definedon=mesh.Boundaries(\".*\")) # trace space, i.e. H^(1/2)(Gamma) conforming elements \n",
+    "fesH1 = H1(mesh, order=order, definedon=mesh.Boundaries(\".*\")) \n",
     "uH1,vH1 = fesH1.TnT()\n",
-    "fesL2 = SurfaceL2(mesh, order=order-1, dual_mapping=True) # trace space, i.e. H^(-1/2)(Gamma) conforming elements \n",
+    "fesL2 = SurfaceL2(mesh, order=order-1, dual_mapping=True) \n",
     "u,v = fesL2.TnT()\n",
     "print (\"L2-ndof = \", fesL2.ndof, \"LH1-ndof = \", fesH1.ndof)"
    ]
@@ -125,7 +133,8 @@
     "with TaskManager():\n",
     "    pre = BilinearForm(u.Trace()*v.Trace()*ds, diagonal=True).Assemble().mat.Inverse()\n",
     "    rhs = ((-0.5 * M.mat + K.mat) * m).Evaluate()\n",
-    "    CG(mat = V.mat, pre=pre, rhs = rhs, sol=j.vec, tol=1e-8, maxsteps=200, initialize=False, printrates=False)"
+    "    CG(mat = V.mat, pre=pre, rhs = rhs, sol=j.vec, tol=1e-8, \n",
+    "       maxsteps=200, initialize=False, printrates=False)"
    ]
   },
   {
@@ -143,7 +152,7 @@
    "id": "e1b028a2-773d-45f4-aa54-dacdbf7848a1",
    "metadata": {},
    "source": [
-    "Evaluate the solution on a vertical screen"
+    "**Evaluation of the Solution**"
    ]
   },
   {
@@ -159,7 +168,8 @@
     "gf_screen = GridFunction(fes_screen)\n",
     "print (\"ndofscreen=\", fes_screen.ndof)\n",
     "with TaskManager():\n",
-    "    gf_screen.Set(-SLPotential(j)+DLPotential(utop)+DLPotential(ubot), definedon=mesh_screen.Boundaries(\".*\"), dual=False)\n",
+    "    gf_screen.Set(-SLPotential(j)+DLPotential(utop)+DLPotential(ubot), \n",
+    "                  definedon=mesh_screen.Boundaries(\".*\"), dual=False)\n",
     "ea = {\"euler_angles\": (0,90,180)}    \n",
     "Draw (gf_screen, **ea)"
    ]
@@ -169,15 +179,17 @@
    "id": "e54011e8-6e53-4196-825c-919c9f903b0a",
    "metadata": {},
    "source": [
-    "**Testing the BEM solution with FEM**"
+    "**Compare BEM solution with FEM**"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fd71df29-efaa-49f6-9e2d-4f983ee90d8e",
+   "id": "e8233ec2-5791-4942-87bb-b562a2ff06c2",
    "metadata": {},
    "source": [
-    "Evaluate the solution $u$ on a box that wraps the place capacitor. We use this data as boundary data for the FEM computation:"
+    "Solve the FEM variational formulation with given Dirichlet conditions on the plates **and** on the ficticious box:\n",
+    "- boundary conditions on the ficticous box given by the Dirichlet trace of the BEM solution\n",
+    "- resolve geometric singularities by anisotropic refinement "
    ]
   },
   {
@@ -192,16 +204,9 @@
     "fes_shell = H1(mesh_shell, order=3)\n",
     "gf_shell = GridFunction(fes_shell)\n",
     "with TaskManager():\n",
-    "    gf_shell.Set(-SLPotential(j)+DLPotential(utop)+DLPotential(ubot), definedon=mesh_shell.Boundaries(\"outer\"), dual=False)\n",
+    "    gf_shell.Set(-SLPotential(j)+DLPotential(utop)+DLPotential(ubot), \n",
+    "                 definedon=mesh_shell.Boundaries(\"outer\"), dual=False)\n",
     "Draw(gf_shell)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e8233ec2-5791-4942-87bb-b562a2ff06c2",
-   "metadata": {},
-   "source": [
-    "Solve the FEM variational formulation with given Dirichlet conditions on the plates **and** on the ficticious box:"
    ]
   },
   {
@@ -236,7 +241,7 @@
    "id": "2bb6742a-5c71-4217-a681-548eb9bb629f",
    "metadata": {},
    "source": [
-    "Have a look at the FEM solution on a clipping plane through the box:"
+    "Have a look at the FEM solution:"
    ]
   },
   {
@@ -250,7 +255,29 @@
     "gfud.vec.data = gf_shell.vec + utop.vec + ubot.vec\n",
     "gfud.vec.data += ad.mat.Inverse(freedofs=fesH1d.FreeDofs()) * r\n",
     "ea = {\"euler_angles\": (-90,0,0)}\n",
-    "Draw(gfud, clipping={\"y\":1, \"z\":0, \"dist\":0.0, \"function\" : True }, **ea);"
+    "Draw(gfud, clipping={\"y\":1, \"z\":0, \"dist\":0, \n",
+    "                     \"function\" : True }, **ea);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66d35eb7-5b1c-49a6-b2f5-25c85698dbe0",
+   "metadata": {},
+   "source": [
+    "Have a look at the FEM solution (projected on the screen):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbd3cab5-df40-445e-a522-7feaec809262",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gf = GridFunction(fes_screen)\n",
+    "gf.Set(gfud, definedon=mesh_screen.Boundaries(\".*\"), dual=False)\n",
+    "ea = {\"euler_angles\": (0,90,180)}\n",
+    "Draw(gf, screen, **ea)"
    ]
   },
   {
@@ -258,13 +285,13 @@
    "id": "49416080-2c8f-4635-8840-54667c9bfbb7",
    "metadata": {},
    "source": [
-    "Error between BEM and FEM solution"
+    "Have a look at the error between BEM and FEM solution on the screen:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c4eb6b0-14e4-49dc-b627-3bc0ce3d47a7",
+   "id": "fef47d2b-f84c-44e2-8aa3-9cf4d1ac83a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,6 +300,14 @@
     "ea = {\"euler_angles\": (0,90,180)}\n",
     "Draw(gf, screen, **ea)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c4eb6b0-14e4-49dc-b627-3bc0ce3d47a7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -299,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
