--- a/demos/Helmholtz_Brakhage_Werner.ipynb
+++ b/demos/Helmholtz_Brakhage_Werner.ipynb
@@ -15,6 +15,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "74ded93f-df35-4af8-b7e0-b89d37992108",
+   "metadata": {},
+   "source": [
+    "**keys**: Acoustic Scattering, Brakhage-Werner formulation, Helmholtz equation, Dirichlet data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b35b18fe-551e-40a9-be38-69203071e882",
    "metadata": {},
    "source": [
@@ -48,7 +56,7 @@
     "G(x,y) = \\frac{e^{i\\kappa \\|x-y\\|}}{4\\pi\\,\\|x-y\\|}.\n",
     "$$\n",
     "\n",
-    "The layer potentials have the same form as in the Laplace case, except that the Laplace Green’s function is replaced by the Helmholtz kernel G."
+    "The layer potentials have the same form as in the Laplace case, except that the Laplace kernel is replaced by the Helmholtz kernel $G$."
    ]
   },
   {
@@ -87,9 +95,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fes_sphere = Compress(SurfaceL2(mesh, order=order, complex=True, definedon=mesh.Boundaries(\"sphere\")))\n",
+    "fes_sphere = Compress(SurfaceL2(mesh, \n",
+    "                                order=order, \n",
+    "                                complex=True, \n",
+    "                                definedon=mesh.Boundaries(\"sphere\")))\n",
     "u,v = fes_sphere.TnT()\n",
-    "fes_screen = Compress(SurfaceL2(mesh, order=order, dual_mapping=True, complex=True, definedon=mesh.Boundaries(\"screen\")))\n",
+    "fes_screen = Compress(SurfaceL2(mesh, order=order, \n",
+    "                                dual_mapping=True, \n",
+    "                                complex=True, \n",
+    "                                definedon=mesh.Boundaries(\"screen\")))\n",
     "print (\"ndof_sphere = \", fes_sphere.ndof, \"ndof_screen =\", fes_screen.ndof)"
    ]
   },
@@ -128,7 +142,8 @@
     "gfu = GridFunction(fes_sphere)\n",
     "pre = BilinearForm(u*v*ds, diagonal=True).Assemble().mat.Inverse()\n",
     "with TaskManager():\n",
-    "    gfu.vec[:] = solvers.GMRes(A=lhs, b=rhs.vec, pre=pre, maxsteps=40, tol=1e-8)"
+    "    gfu.vec[:] = solvers.GMRes(A=lhs, b=rhs.vec, pre=pre, maxsteps=40, tol=1e-8, \n",
+    "                               printrates=False)"
    ]
   },
   {
@@ -146,7 +161,7 @@
    "id": "11",
    "metadata": {},
    "source": [
-    "## Postprocessing on screen"
+    "**Evaluation of the Solution** "
    ]
   },
   {
@@ -210,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
