--- a/demos/Laplace_DtN_direct.ipynb
+++ b/demos/Laplace_DtN_direct.ipynb
@@ -47,9 +47,13 @@
    "id": "a1f3128c-f83c-4859-9fab-3ed5a951b794",
    "metadata": {},
    "source": [
-    "Let us choose the following ansatz for the solution $u\\in H^1(\\Omega)$ (direct ansatz) \n",
+    "The solution $u\\in H^1(\\Omega)$ is given by \n",
     "\n",
-    "$$ u(x) = \\underbrace{ \\int\\limits_\\Gamma \\displaystyle{\\frac{1}{4\\,\\pi}\\, \\frac{1}{\\| x-y\\|} } \\, j(y)\\, \\mathrm{d}s_y}_{\\displaystyle{ \\mathrm{ SL}(j) }} - \\underbrace{ \\int\\limits_\\Gamma \\displaystyle{\\frac{1}{4\\,\\pi}\\, \\frac{\\langle n(y) , x-y\\rangle }{\\| x-y\\|^3} } \\, m(y)\\, \\mathrm{d}s_y}_{\\displaystyle{ \\mathrm{DL}(m) }}$$ \n"
+    "$$ (1) \\quad \\quad \\quad u(x) = \\underbrace{ \\int\\limits_\\Gamma \\displaystyle{\\frac{1}{4\\,\\pi}\\, \\frac{1}{\\| x-y\\|} } \\, j(y)\\, \\mathrm{d}s_y}_{\\displaystyle{ \\mathrm{ LaplaceSL}(j) }} - \\underbrace{ \\int\\limits_\\Gamma \\displaystyle{\\frac{1}{4\\,\\pi}\\, \\frac{\\langle n(y) , x-y\\rangle }{\\| x-y\\|^3} } \\, m(y)\\, \\mathrm{d}s_y}_{\\displaystyle{ \\mathrm{LaplaceDL}(m) }}\\,,$$ \n",
+    "\n",
+    "where $\\mathrm j$ solves the boundary integral equation \n",
+    "\n",
+    "$$ \\mathrm V \\, \\mathrm j= \\left( \\frac12 \\mathrm M + \\mathrm K\\right) \\mathrm m\\quad \\text{on} \\; \\Gamma\\,.$$\n"
    ]
   },
   {
@@ -57,7 +61,7 @@
    "id": "be5f96f2-32b2-4d48-883f-8bc994f9388d",
    "metadata": {},
    "source": [
-    "Define the geometry $\\Omega \\subset \\mathbb R^3$ and create a mesh:"
+    "Define the geometry $\\Omega \\subset \\mathbb R^3$, create a mesh and create test and trial functions:"
    ]
   },
   {
@@ -69,14 +73,6 @@
    "source": [
     "sp = Sphere( (0,0,0), 1)\n",
     "mesh = Mesh( OCCGeometry(sp).GenerateMesh(maxh=0.2)).Curve(4)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8f6fd26c-9809-458b-82e4-958a1206fd5a",
-   "metadata": {},
-   "source": [
-    "Create the finite element spaces for $H^{-\\frac12}(\\Gamma)$ and $H^{\\frac12}(\\Gamma)$ according to the given mesh:  "
    ]
   },
   {
@@ -98,7 +94,7 @@
    "id": "1b0307f4-ad7f-4252-84ab-f4c8b14c896d",
    "metadata": {},
    "source": [
-    "Compute the interpolation of exact Dirichlet data $u_0$ in finite element space:"
+    "Consider as Dirichlet data $m = \\displaystyle \\frac{1}{\\|x-x_0\\|}$ and compute its interpolation in $H^{\\frac12}(\\Gamma)$:"
    ]
   },
   {
@@ -121,9 +117,9 @@
    "source": [
     "**Boundary Integral Equation** \n",
     "\n",
-    "We carefully apply the Dirichlet trace on the ansatz for $u$, we get a boundary integral equation for the Neumann data $j \\in H^{-\\frac12}(\\Gamma)$ which can be read as follows: determine $j$ such that \n",
+    "We carefully apply the Dirichlet trace to (1) and derive a boundary integral equation for $j$ \n",
     "\n",
-    "$$\\begin{array}{r c ccccc} \\forall \\, v\\in H^{-\\frac12}(\\Gamma): && \\displaystyle \\int\\limits_\\Gamma \\gamma_0 \\left(\\mathrm{SL}(j)\\right) \\cdot v \\, \\mathrm d s &=& \\displaystyle \\int\\limits_\\Gamma m \\cdot v \\, \\mathrm d s &+& \\displaystyle \\int\\limits_\\Gamma \\gamma_0 \\left(\\mathrm{DL}(m)\\right)\\cdot v \\, \\mathrm d s \\\\[2ex] & \\Rightarrow & \\mathrm{V}\\,\\mathrm{j} &=& \\displaystyle \\frac12\\,\\mathrm{M} \\, \\mathrm m &+&  \\mathrm K\\, \\mathrm m \\,. \\end{array} $$ "
+    "$$ \\forall \\, v\\in H^{-\\frac12}(\\Gamma): \\quad \\displaystyle \\int\\limits_\\Gamma \\gamma_0 \\left(\\mathrm{LaplaceSL}(j)\\right) \\cdot v \\, \\mathrm d s = \\displaystyle \\int\\limits_\\Gamma m \\cdot v \\, \\mathrm d s + \\displaystyle \\int\\limits_\\Gamma \\gamma_0 \\left(\\mathrm{LaplaceDL}(m)\\right)\\cdot v \\, \\mathrm d s $$ "
    ]
   },
   {
@@ -134,10 +130,10 @@
     "The discretisation of the above variational formulation is the boundary element method and it leads to a system of linear equations, ie \n",
     "\n",
     "$$ \\mathrm{V} \\, \\mathrm{j} = \\left( \\frac12 \\,\\mathrm{M} + \\mathrm{K} \\right) \\, \\mathrm{m}\\,, $$ \n",
-    "where the linear operators are as follows\n",
-    "- $\\mathrm{V}$ is the single layer operator. $\\mathrm V$ is regular and symmetric.\n",
-    "- $\\mathrm{M}$ is a mass matrix.\n",
-    "- $\\mathrm{K}$ is the double layer operator. "
+    "where \n",
+    "- $\\mathrm{V}$ is the single layer operator - it is regular and symmetric.\n",
+    "- $\\mathrm{K}$ is the double layer operator.\n",
+    "- $\\mathrm{M}$ is a mass matrix."
    ]
   },
   {
@@ -145,14 +141,7 @@
    "id": "fb9c361b-e6d3-4295-aa2b-b0a3d8d7679a",
    "metadata": {},
    "source": [
-    "**Details**\n",
-    "  \n",
-    "For any $v_i, u_j\\in H^{-\\frac12}(\\Gamma)$ and $w_j \\in H^{\\frac12}(\\Gamma)$ the layer potential operators are implemented as follows \n",
-    "\n",
-    "$$ \\begin{array}{rcl cl} V_{ij} &=& \\langle v_i, \\gamma_0 \\mathrm{SL}(u_j) \\rangle_{-\\frac12} &=& \\displaystyle \\frac{1}{4\\pi}\\, \\displaystyle \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\frac{1}{\\|x-y\\|} \\, u_j(x) \\, v_i(y) \\, \\mathrm{d} s_{y} \\, \\mathrm{d} s_x\\,, \\\\[2ex] K_{ij} &=& \\langle v_i, \\gamma_0 \\mathrm{DL}(w_j) \\rangle_{-\\frac12} &=& \\displaystyle \\frac{1}{4\\pi} \\int\\limits_\\Gamma\\int\\limits_\\Gamma n_y\\cdot \\nabla_y \\frac{1}{\\|x-y\\|} \\, w_j(x) \\, v_i(y) \\, \\mathrm{d} s_{y} \\, \\mathrm{d} s_x \\end{array}$$\n",
-    "\n",
-    "\n",
-    "You may assemble $V$ and $K$ it by\n",
+    "In NGSBEM, $V$ and $K$ are assembled by\n",
     "\n",
     "```\n",
     "V = LaplaceSL(u*ds)*v*ds\n",
@@ -165,7 +154,7 @@
    "id": "bd4292d0-1b19-4847-9f8f-d3660ba78c4a",
    "metadata": {},
    "source": [
-    "We generate the linear operators and solve for the Neumann data $j$ using an iterative solver:"
+    "Compute the linear operators and solve the linear system of equations for the Neumann data $j$"
    ]
   },
   {
@@ -183,7 +172,8 @@
     "    M = BilinearForm(uH1*v*ds(bonus_intorder=3)).Assemble()\n",
     "    \n",
     "    rhs = ( (0.5 * M.mat + K.mat)*m.vec).Evaluate()\n",
-    "    CG(mat = V.mat, pre=pre, rhs = rhs, sol=j.vec, tol=1e-8, maxsteps=50, initialize=False, printrates=True)\n",
+    "    CG(mat = V.mat, pre=pre, rhs = rhs, sol=j.vec, tol=1e-8, maxsteps=50, \n",
+    "       initialize=False, printrates=False)\n",
     "\n",
     "Draw (j, mesh, draw_vol=False, order=3);"
    ]
@@ -193,7 +183,7 @@
    "id": "81767284-bfe5-4cdf-8d97-1f1b607f9588",
    "metadata": {},
    "source": [
-    "Let's have a look at the exact Neumann data and compute the error of the numerical solution:"
+    "Let's have a look at the exact Neumann data and **compute the error** of the numerical solution:"
    ]
   },
   {
@@ -208,7 +198,7 @@
     "graduexa = CF( (uexa.Diff(x), uexa.Diff(y), uexa.Diff(z)) )\n",
     "n = specialcf.normal(3)\n",
     "jexa = graduexa*n\n",
-    "Draw (jexa, mesh, draw_vol=False, order=3);\n",
+    "#Draw (jexa, mesh, draw_vol=False, order=3);\n",
     "print (\"L2-error =\", sqrt (Integrate ( (jexa-j)**2, mesh, BND)))"
    ]
   },
@@ -217,7 +207,7 @@
    "id": "07475e90-1551-4b36-ac44-0c5312aeaa2a",
    "metadata": {},
    "source": [
-    "**Project repformula in H1**"
+    "**Evaluation of Representation formula**"
    ]
   },
   {
@@ -225,7 +215,7 @@
    "id": "e4705bf1-90d3-4ea5-9efc-170667664ad3",
    "metadata": {},
    "source": [
-    "Evaluate the solution on a screen inside $\\Omega$ "
+    "Use the represenation formula $(1)$ and evaluate the solution $u$ on a screen inside $\\Omega$ "
    ]
   },
   {
@@ -263,7 +253,24 @@
     "gf_screen = GridFunction(fes_screen)\n",
     "with TaskManager():\n",
     "    gf_screen.Set(repformula, definedon=vismesh.Boundaries(\"screen\"))\n",
-    "Draw(gf_screen)\n",
+    "Draw(gf_screen)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b84ebe6c-f322-48a0-aa84-672d11cddca1",
+   "metadata": {},
+   "source": [
+    "Have a look at the error in the solution $u$ on the screen:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aeef1ea0-224a-488f-bdc3-139e4b4836ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Draw(repformula - uexa, vismesh)"
    ]
   },
@@ -278,9 +285,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "00b240db-70a8-41a2-a5cb-cd9a7ed2976b",
+   "metadata": {},
+   "source": [
+    "**Details: The Single and Double Layer Potential Operators**\n",
+    "\n",
+    "For any trial functions $u_j, w_j$ and test function $v_i$, the layer potential operators are implemented as follows \n",
+    "\n",
+    "$$ \\begin{array}{rcl} V_{ij} &=& \\displaystyle \\frac{1}{4\\pi}\\, \\displaystyle \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\frac{1}{\\|x-y\\|} \\, u_j(x) \\, v_i(y) \\, \\mathrm{d} s_{y} \\, \\mathrm{d} s_x\\,, \\\\[2ex] K_{ij} &=& \\displaystyle \\frac{1}{4\\pi} \\int\\limits_\\Gamma\\int\\limits_\\Gamma n_y\\cdot \\nabla_y \\frac{1}{\\|x-y\\|} \\, w_j(x) \\, v_i(y) \\, \\mathrm{d} s_{y} \\, \\mathrm{d} s_x \\end{array}$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3db028fb-61bd-484e-8fe6-5fe939394fd6",
+   "id": "11e00661-cbda-4f10-9489-81fd6d8d6c1f",
    "metadata": {},
    "outputs": [],
    "source": []
