--- a/demos/Laplace_NtD_direct.ipynb
+++ b/demos/Laplace_NtD_direct.ipynb
@@ -41,9 +41,9 @@
     "\n",
     "$$ \\left\\{ \\begin{array}{rlc l} \\Delta u &=& 0, \\quad &\\Omega \\subset \\mathbb R^3\\,,\\\\ \\gamma_1 u&=& j, \\quad &\\Gamma = \\partial \\Omega\\,.\\end{array} \\right. $$ \n",
     "\n",
-    "The unique solution $u\\in H^1(\\Omega)$ can be written in the following form (representation forumula) \n",
+    "The solution $u\\in H^1(\\Omega)$ is given by\n",
     "\n",
-    "$$ u(x) = \\underbrace{ \\int\\limits_\\Gamma \\displaystyle{\\frac{1}{4\\,\\pi}\\, \\frac{1}{\\| x-y\\|} } \\, j(y)\\, \\mathrm{d}s_y}_{\\displaystyle{ \\mathrm{SL}(j) }} - \\underbrace{ \\int\\limits_\\Gamma \\displaystyle{\\frac{1}{4\\,\\pi}\\, \\frac{\\langle n(y), x-y \\rangle}{\\| x-y\\|^3} } \\, m( y)\\, \\mathrm{d}s_y}_{\\displaystyle{ \\mathrm{DL}(m) }}\\,.$$ \n"
+    "$$ (1) \\quad \\quad \\quad u(x) = \\underbrace{ \\int\\limits_\\Gamma \\displaystyle{\\frac{1}{4\\,\\pi}\\, \\frac{1}{\\| x-y\\|} } \\, j(y)\\, \\mathrm{d}s_y}_{\\displaystyle{ \\mathrm{LaplaceSL}(j) }} - \\underbrace{ \\int\\limits_\\Gamma \\displaystyle{\\frac{1}{4\\,\\pi}\\, \\frac{\\langle n(y), x-y \\rangle}{\\| x-y\\|^3} } \\, m( y)\\, \\mathrm{d}s_y}_{\\displaystyle{ \\mathrm{LaplaceDL}(m) }}\\,.$$ \n"
    ]
   },
   {
@@ -51,9 +51,7 @@
    "id": "8849820a-3553-4222-9027-52cebe7eac8d",
    "metadata": {},
    "source": [
-    "**NGSolve Solution**\n",
-    "\n",
-    "Define the geometry $\\Omega \\subset \\mathbb R^3$ and create a mesh:"
+    "Define the geometry $\\Omega \\subset \\mathbb R^3$, create a mesh and create test and trial functions:"
    ]
   },
   {
@@ -65,14 +63,6 @@
    "source": [
     "sp = Sphere( (0,0,0), 1)\n",
     "mesh = Mesh( OCCGeometry(sp).GenerateMesh(maxh=0.2)).Curve(2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4aecdc7b-5270-4b06-8f3d-59509e75e44d",
-   "metadata": {},
-   "source": [
-    "Define conforming finite element spaces for $H^{\\frac12}(\\Gamma)$ and $H^{-\\frac12}(\\Gamma)$ respectively:  "
    ]
   },
   {
@@ -94,7 +84,7 @@
    "id": "6173bec6-13d4-45cf-bd84-5c95952f5c03",
    "metadata": {},
    "source": [
-    "Project the given Neumann data $u_1$ in finite element space and have a look at the boundary data:"
+    "Consider as Neumann data $m = n\\cdot \\nabla \\displaystyle \\frac{1}{\\|x-x_0\\|}$ and compute its interpolation in $H^{-\\frac12}(\\Gamma)$:"
    ]
   },
   {
@@ -105,12 +95,10 @@
    "outputs": [],
    "source": [
     "uexa = 1/ sqrt( (x-1)**2 + (y-1)**2 + (z-1)**2 )\n",
-    "\n",
     "graduexa = CF( (uexa.Diff(x), uexa.Diff(y), uexa.Diff(z)) )\n",
     "n = specialcf.normal(3)\n",
     "j = GridFunction(fesL2)\n",
     "j.Interpolate(graduexa*n, definedon=mesh.Boundaries(\".*\"))\n",
-    "\n",
     "Draw (j, mesh, draw_vol=False, order=3);"
    ]
   },
@@ -121,7 +109,7 @@
    "source": [
     "**Boundary Integral Equation**\n",
     "\n",
-    "Let's carefully apply the Neumann trace $\\gamma_1$ to the representation formula and solve the resulting boundary integral equation for the Dirichlet trace $u_0$ of $u$ by discretisation of the following variational formulation: \n",
+    "Let's carefully apply the Neumann trace to (1) and derive a boundary integral equation for $m$: \n",
     "\n",
     "$$\\begin{array}{r c ccc} \\forall \\, v\\in H^{\\frac12}(\\Gamma): && \\displaystyle \\int\\limits_\\Gamma v \\cdot \\gamma_1 \\left(\\mathrm{DL}(m) \\right) \\, \\mathrm d s  &=&  \\displaystyle \\int\\limits_\\Gamma j \\cdot  v \\,\\mathrm d s &-& \\displaystyle \\int\\limits_\\Gamma v \\cdot \\gamma_1 \\left(\\mathrm{SL}(j)\\right) \\, \\mathrm d s \\\\[2ex] & \\Rightarrow & \\mathrm{D}\\,\\mathrm{m} &=& \\dfrac12 \\, \\mathrm{M} \\, \\mathrm j &-& \\mathrm{K}' \\, \\mathrm j\\,. \\end{array} $$ \n"
    ]
@@ -136,53 +124,9 @@
     "$$ \\left( \\mathrm{D} + \\mathrm{S}\\right) \\, \\mathrm{m} = \\left( \\frac12 \\,\\mathrm{M} - \\mathrm{K}' \\right) \\, \\mathrm{j} \\,, $$\n",
     "\n",
     "where the linear operators are as follows\n",
-    "- $\\mathrm{S}$ is a stabilisation matrix that removes the one dimensional kernel from hypersinbular operator.\n",
-    "-  $\\mathrm{D}$ is the hypersingular operator and the stabilisation $(\\mathrm D + \\mathrm{S})$ is regular and symmetric.\n",
-    "- $\\mathrm{M}$ is a mass matrix.\n",
-    "- $\\mathrm{K}'$ is the adjoint double layer operator. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9e89a50d-36e8-4b0e-83d2-46fe9e29e9e4",
-   "metadata": {},
-   "source": [
-    "**Details**\n",
-    "  \n",
-    "For any $u_j, v_i \\in H^{\\frac12}(\\Gamma)$ the hypersingular operator is implemented as follows (reference below)\n",
-    "\n",
-    "$$ D_{ij} = \\langle v_i, \\gamma_1 \\mathrm{DL}(u_j) \\rangle_{-\\frac12} = \\frac{1}{4\\pi} \\int\\limits_\\Gamma\\int\\limits_\\Gamma \\frac{ \\langle \\mathrm{\\boldsymbol {curl}}_\\Gamma  \\,u_j(x), \\mathrm{\\boldsymbol{curl}}_\\Gamma\\, v_i(y) \\rangle}{\\|x-y\\|} \\, \\mathrm{d} s_{y} \\, \\mathrm{d} s_x $$ \n",
-    "\n",
-    "This explicit represenation of $D$ is the singular layer potential operator with vector valued surface curl operator applied on trial and test functions. You may assemble $D$ it by\n",
-    "\n",
-    "```\n",
-    "D = LaplaceSL(curl(u)*ds)*curl(v)*ds\n",
-    "```\n",
-    "\n",
-    "Recall that for any $v_i\\in H^{-\\frac12}(\\Gamma)$ and $w_j \\in H^{\\frac12}(\\Gamma)$ the double layer potential operators $\\mathrm K$ has been given by\n",
-    "\n",
-    "$$ \\begin{array}{rcl cl} K_{ij} &=& \\langle v_i, \\gamma_0 \\mathrm{DL}(w_j) \\rangle_{-\\frac12} &=& \\displaystyle \\frac{1}{4\\pi} \\int\\limits_\\Gamma\\int\\limits_\\Gamma n_y\\cdot \\nabla_y \\frac{1}{\\|x-y\\|} \\, w_j(x) \\, v_i(y) \\, \\mathrm{d} s_{y} \\, \\mathrm{d} s_x \\end{array}$$\n",
-    "\n",
-    "And this means that the adjoint double layer potential operator equals its transposed, $\\mathrm K^\\intercal$.  \n",
-    "\n",
-    "You may assemble $\\mathrm V$ and $\\mathrm K$ it by\n",
-    "\n",
-    "```\n",
-    "V = LaplaceSL(u*ds)*v*ds\n",
-    "K = LaplaceDL(w*ds)*v*ds\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9abc02ba-3c53-499c-bd3e-87357f76004c",
-   "metadata": {},
-   "source": [
-    "The stabilisation matrix $S$ is needed to cope with the kernel of the hypersingular operator. The following stabilisation matrix is used here: \n",
-    "\n",
-    "$$ S \\in \\mathbb R^{n\\times n}, \\quad S_{ij} = \\int\\limits_{\\Gamma} v_i(x) \\,\\mathrm{d} s \\cdot \\int\\limits_{\\Gamma} v_j(x) \\,\\mathrm{d} s\\,,$$ \n",
-    "\n",
-    "where $v_i, v_j$ being $H^{\\frac12}(\\Gamma)$-conforming shape functions. "
+    "- $\\mathrm{D} + \\mathrm S$ is regular and symmetric, it is the **stabilized hypersingular operator** (see [Laplace NtD indirect](Laplace_NtD_indirect.ipynb) )\n",
+    "- $\\mathrm{K}'$ is the **adjoint double layer potential operator**, it is the transposed of $\\mathrm K$ as discussed in [Laplace DtN direct](Laplace_DtN_direct.ipynb)).\n",
+    "- $\\mathrm{M}$ is a mass matrix."
    ]
   },
   {
@@ -237,7 +181,8 @@
     "with TaskManager(): \n",
     "    lhs = D.mat + S\n",
     "    rhs = ( (0.5 * M.mat.T - K.mat.T) * j.vec ).Evaluate()\n",
-    "    CG(mat=lhs, pre=pre, rhs=rhs, sol=m.vec, tol=1e-8, maxsteps=200, initialize=False, printrates=True)"
+    "    CG(mat=lhs, pre=pre, rhs=rhs, sol=m.vec, tol=1e-8, \n",
+    "       maxsteps=200, initialize=False, printrates=False)"
    ]
   },
   {
@@ -268,7 +213,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print (\"L2 error of surface gradients =\", sqrt (Integrate ( (grad(mexa)-grad(m))**2, mesh, BND)))"
+    "print (\"L2 error of surface gradients =\", \n",
+    "       sqrt (Integrate ( (grad(mexa)-grad(m))**2, mesh, BND)))"
    ]
   },
   {
@@ -276,7 +222,7 @@
    "id": "e374149d-545d-4ca2-bc6e-f03ebfdfc314",
    "metadata": {},
    "source": [
-    "**Evaluation Solution**"
+    "**Evaluation of the Solution**"
    ]
   },
   {
@@ -315,7 +261,25 @@
     "with TaskManager():\n",
     "    gf_screen.Set(repformula, definedon=vismesh.Boundaries(\"screen\"))\n",
     "Draw(gf_screen)\n",
-    "Draw(repformula - uexa, vismesh) # exact up to a constant "
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "851c078a-8fd6-4a4c-8860-21ef36c3685f",
+   "metadata": {},
+   "source": [
+    "Have a look at the error on the screen (it must be a constant):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "375a7999-c255-4a1e-9f2b-ef76c4382901",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Draw(repformula - uexa, vismesh) # constant"
    ]
   },
   {
