--- a/demos/Maxwell_DtN_direct.ipynb
+++ b/demos/Maxwell_DtN_direct.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4220f8af-1580-467a-801e-6ef49d43c70c",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
    "id": "82ca8ea2-1feb-46f7-b416-b95db24a9090",
    "metadata": {},
    "source": [
-    "We consider a perfect conductor $\\Omega \\subset \\mathbb R^3$ and an electromagnetic signal that induces a scattered electric field which propagates into $\\Omega^c$. The scattered electric field $\\boldsymbol E$ solves the following Dirichlet boundary value problem: \n",
+    "We consider a perfect conductor $\\Omega \\subset \\mathbb R^3$ emitting an electric field into $\\Omega^c$. The scattered electric field $\\boldsymbol E$ solves the following Dirichlet boundary value problem: \n",
     "\n",
     "$$ \\left\\{ \\begin{array}{rcl l} \\mathbf{curl} \\, \\mathbf{curl}\\, \\boldsymbol E - \\kappa^2 \\, \\boldsymbol E &=& \\boldsymbol 0, \\quad &\\textnormal{in } \\Omega^c \\subset \\mathbb R^3\\,,\\\\ \\gamma_R \\,\\boldsymbol E &=& \\boldsymbol m, \\quad & \\textnormal{on }\\Gamma \\\\ \\left\\| \\mathbf{curl} \\, \\boldsymbol E( x) - i\\,\\omega\\,\\epsilon \\, \\boldsymbol E( x)\\right\\| &=& \\mathcal O\\left( \\displaystyle \\frac{1}{\\| x\\|^2}\\right), &\\textnormal{for} \\; \\|x\\| \\to \\infty\\,.\\end{array} \\right. $$ \n"
    ]
@@ -48,9 +48,9 @@
    "id": "d0b75926-7795-4f15-bb60-8eada2a9b552",
    "metadata": {},
    "source": [
-    "A possible representation for $\\boldsymbol E$ reads\n",
+    "The electric field $\\boldsymbol E$ is given by\n",
     "\n",
-    "$$ \\boldsymbol E(x) = \\underbrace{ \\kappa \\, \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol j(y)\\, \\mathrm{d}s_y  +  \\frac{1}{\\kappa} \\, \\nabla \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi}\\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\mathrm{div}_\\Gamma \\boldsymbol j(y)\\, \\mathrm{d}s_y}_{\\displaystyle{ \\mathrm{SL}(\\boldsymbol j)}}+ \\underbrace{ \\nabla \\times  \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol n \\times \\boldsymbol{m}(y)\\, \\mathrm{d}s_y }_{\\displaystyle \\mathrm{DL}(\\boldsymbol n\\times\\boldsymbol m) } \\,.$$"
+    "$$ \\begin{array}{rcl}(1) \\quad \\quad \\quad \\boldsymbol E(x) &=& \\underbrace{ \\kappa \\, \\displaystyle \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol j(y)\\, \\mathrm{d}s_y  +  \\frac{1}{\\kappa} \\, \\nabla \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi}\\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\mathrm{div}_\\Gamma \\boldsymbol j(y)\\, \\mathrm{d}s_y }_{\\displaystyle \\mathrm{SL}(\\boldsymbol j)} \\\\[2ex] && \\quad + \\;\\underbrace{ \\nabla \\times  \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol n \\times \\boldsymbol{m}(y)\\, \\mathrm{d}s_y }_{\\displaystyle \\mathrm{DL}(\\boldsymbol n \\times\\boldsymbol m)}\\,. \\end{array}$$"
    ]
   },
   {
@@ -58,27 +58,18 @@
    "id": "5a194f98-1a0f-41ba-9b5f-d5cab264cef8",
    "metadata": {},
    "source": [
-    "**NGSolve Solution**  \n",
-    "Define the geometry of the perfect conductor $\\Omega$ and create a mesh:"
+    "Define the geometry of the perfect conductor $\\Omega$, create a mesh and test and trial functions according to the mesh: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b3bee3e9-b23a-43dd-b5d9-8f9265af827a",
    "metadata": {},
    "outputs": [],
    "source": [
     "sp = Sphere( (0,0,0), 1)\n",
     "mesh = Mesh( OCCGeometry(sp).GenerateMesh(maxh=1, perfstepsend=meshing.MeshingStep.MESHSURFACE)).Curve(3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "65e5bb28-d6bd-414e-b46c-8b794a8485d0",
-   "metadata": {},
-   "source": [
-    "Next, we create finite element spaces for $\\boldsymbol H^{-\\frac12}(\\mathrm{curl}_\\Gamma, \\Gamma)$ (test functions) and $\\boldsymbol H^{-\\frac12}(\\mathrm{div}_\\Gamma, \\Gamma)$ (trial functions): "
    ]
   },
   {
@@ -100,24 +91,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a56ea32e-7668-48b0-97f3-8fc06926cb06",
-   "metadata": {},
-   "source": [
-    "**Boundary Integral Equation**\n",
-    "\n",
-    "We carefully apply the tangential trace $\\gamma_R$ on $\\boldsymbol E$ and obtain a boundary integral equation for the unknown trace $\\boldsymbol j$. The boundary integral equation is solved by the boundary element method, i.e. the numerical solution of the variational formulation \n",
-    "\n",
-    "$$ \\begin{array}{l c c c c c c} \\forall \\, \\boldsymbol v\\in H^{-\\frac12}(\\mathrm{div}_\\Gamma, \\Gamma): &  & \\displaystyle \\int\\limits_\\Gamma \\mathrm{SL}(\\boldsymbol j) \\cdot \\boldsymbol v \\, \\mathrm d s &=&  \\displaystyle \\int\\limits_\\Gamma \\boldsymbol m \\cdot  \\boldsymbol v \\, \\mathrm d s &+&  \\displaystyle \\int\\limits_\\Gamma \\mathrm{DL}(\\boldsymbol n \\times \\boldsymbol{m}) \\cdot \\boldsymbol v \\, \\mathrm d s \\\\[2ex] & \\Rightarrow & \\mathrm{V}\\,\\mathrm j &=& \\displaystyle \\frac12\\,\\mathrm{M} \\, \\mathrm m &-&  \\mathrm K\\, \\mathrm m \\,. \\end{array} $$ \n",
-    "\n",
-    "In the enineering community, the approximation scheme is also known as **method of moments** (MoM). "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "eca4c4e3-48a7-4c9a-8884-20bae03ef373",
    "metadata": {},
    "source": [
-    "Define the incoming plane wave and compute the given boundary data $\\boldsymbol m = -\\gamma_R \\boldsymbol E_{\\mathrm{inc}}$ : "
+    "Consider as incidence an incoming plane wave and compute the given data $\\boldsymbol m$ : "
    ]
   },
   {
@@ -142,47 +119,37 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d01290a-0d5b-41e9-87d3-a3cb02802867",
+   "id": "a56ea32e-7668-48b0-97f3-8fc06926cb06",
    "metadata": {},
    "source": [
-    "The discretisation of the above variational formulation leads to a system of linear equations, ie\n",
-    "$$ \\mathrm{V} \\, \\mathrm j = \\left( \\frac12 \\,\\mathrm{M} - \\mathrm{K} \\right)\\, \\mathrm{m}\\,,$$\n",
-    "where  \n",
-    "* $\\mathrm V$ is the Maxwell single layer operator. $V$ is a regular, symmetric matrix.\n",
-    "* $\\mathrm{M}$ is the mass matrix.\n",
-    "* $\\mathrm K$ is the Maxwell double layer operator. $K$ is quadratic:\n",
+    "**Boundary Integral Equation**\n",
     "\n",
-    "The assembly of the potential operators is declarative and close to their actual implementations. All contributions to the Maxwell layer potentials are derivates of the Helmholtz layer potentials and thus, we use the Helmholtz operators as building blocks."
+    "We carefully apply the tangential trace to (1) and obtain a boundary integral equation for $\\boldsymbol j$: \n",
+    "\n",
+    "$$ \\forall \\, \\boldsymbol v\\in H^{-\\frac12}(\\mathrm{div}_\\Gamma, \\Gamma): \\quad \\displaystyle \\int\\limits_\\Gamma \\mathrm{SL}(\\boldsymbol j) \\cdot \\boldsymbol v \\, \\mathrm d s = \\displaystyle \\int\\limits_\\Gamma \\boldsymbol m \\cdot  \\boldsymbol v \\, \\mathrm d s +  \\displaystyle \\int\\limits_\\Gamma \\mathrm{DL}(\\boldsymbol n \\times \\boldsymbol{m}) \\cdot \\boldsymbol v \\, \\mathrm d s $$ "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ede08b98-8609-433f-872f-9bc19c52fd95",
+   "id": "7d01290a-0d5b-41e9-87d3-a3cb02802867",
    "metadata": {},
    "source": [
-    "**Details**\n",
+    "The discretisation of the above variational formulation leads to the system of linear equations\n",
     "\n",
-    "For a trial function $\\boldsymbol u_j \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ and a test function $\\boldsymbol v_i \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ the Maxwell single layer potential operator entry $V_{ij}$ can formally written as\n",
+    "$$ \\mathrm{V} \\, \\mathrm j = \\left( \\frac12 \\,\\mathrm{M} - \\mathrm{K} \\right)\\, \\mathrm{m}\\,,$$\n",
     "\n",
-    "$$ V_{ij} = \\kappa \\, \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol u_j(y) \\cdot \\boldsymbol v_i(x) \\, \\mathrm{d}s_x \\mathrm{d} s_x - \\frac{1}{\\kappa} \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi}\\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\mathrm{div}_\\Gamma \\boldsymbol u_j(y)\\,  \\mathrm{div}_\\Gamma \\boldsymbol v_i(x)\\, \\mathrm{d}\\sigma_y\\,\\mathrm d s_x\\,. $$ \n",
+    "where  \n",
+    "* $\\mathrm V$ is the Maxwell single layer operator.\n",
+    "* $\\mathrm K$ is the Maxwell double layer operator.\n",
+    "* $\\mathrm{M}$ is the mass matrix.\n",
     "\n",
-    "The two contributions are derivates of the Helmholtz single layer potential operator and may be implemented as such:   \n",
-    "\n",
-    "```\n",
-    "V = kappa * (HelmholtzSL(u*ds, kappa)*v*ds - 1/kappa * HelmholtzSL(div(u)*ds, kappa)*div(v)*ds\n",
-    "```\n",
-    "\n",
-    "For a trial function $\\boldsymbol u_j \\in H^{-\\frac12}(\\mathrm{curl}_\\Gamma,\\Gamma)$ and a test function $\\boldsymbol v_i \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ the Maxwell double layer potential operator entry $K_{ij}$ can formally written as\n",
-    "\n",
-    "$$ K_{ij} = \\int\\limits_\\Gamma \\displaystyle\\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\nabla_x \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} }  \\times  ( \\boldsymbol n \\times \\boldsymbol{u}_j(y) ) \\, \\mathrm{d} s_y \\cdot \\boldsymbol v_i(x) \\mathrm d s_x\\,.$$\n",
-    "\n",
-    "Giving transparency to its relation to the Helmholtz double layer potential operator, you may assemble it as follows:\n",
-    "\n",
+    "The **Maxwell single and double layer potential operators** are derivates of Helmholtz operators (details are given below) and thus, in NGSBEM we use the Helmholtz operators as building blocks for Maxwell operators: \n",
     "\n",
     "```\n",
+    "V = kappa * HelmholtzSL(u*ds, kappa)*v*ds\n",
+    "    - 1/kappa * HelmholtzSL(div(u)*ds, kappa)*div(v)*ds\n",
     "K = HelmholtzDL( u.Operator(\"rotated_trace\") * ds, kappa) * v * ds\n",
-    "```\n",
-    "\n"
+    "```"
    ]
   },
   {
@@ -223,7 +190,8 @@
     "pre = BilinearForm( uHDiv.Trace() * vHDiv.Trace() *ds).Assemble().mat.Inverse(freedofs=fesHDiv.FreeDofs()) \n",
     "with TaskManager(): \n",
     "    rhs = ( (0.5 * M.mat - K.mat ) * m.vec).Evaluate() \n",
-    "    GMRes(A = V, pre=pre, b = rhs, x=j.vec, tol=1e-8, maxsteps=5000, printrates=True)"
+    "    GMRes(A = V, pre=pre, b = rhs, x=j.vec, tol=1e-8, \n",
+    "          maxsteps=5000, printrates=False)"
    ]
   },
   {
@@ -238,29 +206,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50cb62f4-98d2-4c38-ae7e-4f116f40bd5a",
+   "id": "3cb32431-4ac1-4e2e-8724-e2f000119d26",
    "metadata": {},
    "source": [
-    "**TODO Evaluate the Solution**\n",
+    "**Details: Explicit Representation of the Maxwell Layer Potentials**\n",
     "\n",
-    "To evaluate the solution inside $\\Omega$ we have to evaluate the representation formula, i.e., \n",
+    "For a trial function $\\boldsymbol u_j \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ and a test function $\\boldsymbol v_i \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ the Maxwell single layer potential operator entry $V_{ij}$ can formally written as\n",
     "\n",
-    "$$ \\boldsymbol E(x) = \\kappa \\, \\underbrace{\\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol j(y)\\, \\mathrm{d}s_y}_{\\displaystyle{ \\mathrm{L}_1(\\boldsymbol j) } }  +  \\frac{1}{\\kappa} \\nabla \\underbrace{ \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi}\\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\mathrm{div}_\\Gamma \\boldsymbol j(y)\\, \\mathrm{d}s_y }_{\\displaystyle{\\mathrm{L}_2(\\boldsymbol j)} } + \\nabla \\times \\underbrace{\\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol n \\times \\boldsymbol{m}(y)\\, \\mathrm{d}s_y }_{\\displaystyle{ \\mathrm{L}_3 (\\boldsymbol{m}) } } \\,.$$\n",
+    "$$ \\begin{array}{rcl} V_{ij} &=& \\kappa \\, \\displaystyle \\int\\limits_\\Gamma \\underbrace{ \\displaystyle \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol u_j(y) \\cdot \\boldsymbol v_i(x) \\, \\mathrm{d}s_x}_{\\displaystyle{\\mathrm{HelmholtzSL}(\\boldsymbol v_i) } }  \\mathrm{d} s_x \\\\ && \\quad - \\; \\frac{1}{\\kappa} \\displaystyle \\int\\limits_\\Gamma \\underbrace{ \\displaystyle \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi}\\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\mathrm{div}_\\Gamma \\boldsymbol u_j(y) }_{\\displaystyle{ \\mathrm{HelmholtzSL}(\\mathrm{div}_\\Gamma(\\boldsymbol u_j) } } \\,  \\mathrm{div}_\\Gamma \\boldsymbol v_i(x)\\, \\mathrm{d}\\sigma_y\\,\\mathrm d s_x\\,. \\end{array} $$  \n",
     "\n",
-    "The kernel function that appears in the Maxwell layer potentials is the same as for Helmholtz. Indead, it turns out that the Maxwell layer potentials are derivates of Helmholtz layer potentials. We make this relation clear by using the Helmholtz layer potentials and layer potential operators as building blocks for Maxwell operators. Note that there are formulations such as the low frequency stabilization that even require an explicit split of the summands of the Maxwell single layer potential (References below).\n",
+    "For a trial function $\\boldsymbol u_j \\in H^{-\\frac12}(\\mathrm{curl}_\\Gamma,\\Gamma)$ and a test function $\\boldsymbol v_i \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ the Maxwell double layer potential operator entry $K_{ij}$ can formally written as\n",
     "\n",
-    "$$ \\begin{array}{rcl} \\mathrm{L}_1(\\boldsymbol u ) &=& \\verb-HelmholtzSL(u * ds, kappa)- \\\\\n",
-    "\\mathrm{L}_2(\\boldsymbol u) &=& \\verb-HelmholtzSL(div(u)*ds, kappa)- \\\\\n",
-    "\\mathrm{L}_3(\\boldsymbol u) &=& \\verb-HelmholtzSL(u.Operator(\"rotated_trace\") *ds, kappa)-\\,. \\end{array}$$"
+    "$$ K_{ij} = \\int\\limits_\\Gamma \\underbrace{\\displaystyle\\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\nabla_x \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} }  \\times  ( \\boldsymbol n \\times \\boldsymbol{u}_j(y) ) \\, \\mathrm{d} s_y }_{ \\displaystyle{\\mathrm{HelmholtzDL}( \\boldsymbol n \\times \\boldsymbol u_j) }}\\cdot \\boldsymbol v_i(x) \\mathrm d s_x\\,.$$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "265cbfe3-1dd8-48a7-86a5-ed3e46b98b52",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
