--- a/demos/Maxwell_DtN_indirect.ipynb
+++ b/demos/Maxwell_DtN_indirect.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4220f8af-1580-467a-801e-6ef49d43c70c",
    "metadata": {},
    "outputs": [],
@@ -38,9 +38,7 @@
    "id": "60f033eb-7ce3-464f-a114-cbcd2b784c83",
    "metadata": {},
    "source": [
-    "**Boundary Value Problem**\n",
-    "\n",
-    "We consider a perfect conducter $\\Omega \\subset \\mathbb R^3$ and a plane wave $\\boldsymbol E_{\\mathrm{inc}} $ with tangential trace $\\gamma_R \\boldsymbol E_{\\mathrm{inc}} = -\\boldsymbol m \\in \\boldsymbol H^{-\\frac12}\\left( \\mathrm{curl}_\\Gamma, \\Gamma\\right)\\,.$ The incoming wave thus induces a scattered electric field $\\boldsymbol E$ which propagates into $\\Omega^c$. The scattered electric field solves the following boundary value problem: \n",
+    "We consider a perfect conductor $\\Omega \\subset \\mathbb R^3$ emitting an electric field into $\\Omega^c$. The scattered electric field $\\boldsymbol E$ solves the following Dirichlet boundary value problem: \n",
     "\n",
     "$$ \\left\\{ \\begin{array}{rcl l} \\mathbf{curl} \\, \\mathbf{curl}\\, \\boldsymbol E - \\kappa^2 \\, \\boldsymbol E &=& \\boldsymbol 0, \\quad &\\textnormal{in } \\Omega^c \\subset \\mathbb R^3\\,,\\\\ \\gamma_R \\,\\boldsymbol E &=& \\boldsymbol m, \\quad & \\textnormal{on }\\Gamma \\\\ \\left\\| \\mathbf{curl} \\, \\boldsymbol E( x) - i\\,\\omega\\,\\epsilon \\, \\boldsymbol E( x)\\right\\| &=& \\mathcal O\\left( \\displaystyle \\frac{1}{\\| x\\|^2}\\right), &\\textnormal{for} \\; \\|x\\| \\to \\infty\\,.\\end{array} \\right. $$ "
    ]
@@ -50,11 +48,9 @@
    "id": "a5742d03-74bb-4b9b-ba12-9b3006a84a80",
    "metadata": {},
    "source": [
-    "**Representation Formula**\n",
+    "The electric field $\\boldsymbol E$ is given by\n",
     "\n",
-    "A possible representation for $\\boldsymbol E$ reads\n",
-    "\n",
-    "$$ \\boldsymbol E(x) = \\underbrace{ \\kappa \\, \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol j(y)\\, \\mathrm{d}s_y  +  \\frac{1}{\\kappa} \\, \\nabla \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi}\\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\mathrm{div}_\\Gamma \\boldsymbol j(y)\\, \\mathrm{d}s_y}_{\\displaystyle{ \\mathrm{SL}(\\boldsymbol j)}} \\,.$$"
+    "$$ (1) \\quad \\quad \\quad \\boldsymbol E(x) = \\underbrace{ \\kappa \\, \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol j(y)\\, \\mathrm{d}s_y  +  \\frac{1}{\\kappa} \\, \\nabla \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi}\\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\mathrm{div}_\\Gamma \\boldsymbol j(y)\\, \\mathrm{d}s_y}_{\\displaystyle{ \\mathrm{SL}(\\boldsymbol j)}} \\,.$$"
    ]
   },
   {
@@ -62,14 +58,12 @@
    "id": "c74e2639-0d66-49ca-84e1-62a4631f1652",
    "metadata": {},
    "source": [
-    "**Solution with NGSolve** \n",
-    "\n",
-    "Define the geometry of the perfect conductor and create a mesh:"
+    "Define the geometry of the perfect conductor $\\Omega$, create a mesh and test and trial functions according to the mesh: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b3bee3e9-b23a-43dd-b5d9-8f9265af827a",
    "metadata": {},
    "outputs": [],
@@ -79,19 +73,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e8c31fe0-9761-494b-9ab7-81a88a8c9bbb",
-   "metadata": {},
-   "source": [
-    "Next, we create finite element spaces $\\boldsymbol H^{-\\frac12}(\\mathrm{curl}_\\Gamma, \\Gamma)$ and $\\boldsymbol H^{-\\frac12}(\\mathrm{div}_\\Gamma, \\Gamma)$:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5a6ee11f-4bc6-4cc8-9408-c4d6d9c4727d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ndof HCurl =  1568\n",
+      "ndof HDiv =  1568\n"
+     ]
+    }
+   ],
    "source": [
     "fesHCurl = HCurl(mesh, order=3, complex=True)\n",
     "fesHDiv = HDivSurface(mesh, order=3, complex=True)\n",
@@ -112,10 +107,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2ea25412-738b-469b-a30c-990d32089e9c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kappa =  5.0034083602476045\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f4817efa56ba43dda6d673e1b2da3d07",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "WebGuiWidget(layout=Layout(height='50vh', width='100%'), value={'gui_settings': {}, 'ngsolve_version': '6.2.25…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "eps0 = 8.854e-12 \n",
     "mu0 = 4*pi*1e-7\n",
@@ -136,11 +153,9 @@
    "source": [
     "**Boundary Integral Equation**\n",
     "\n",
-    "The density $\\boldsymbol j$ is determined by the boundary element method, i.e. the numerical solution of the variational formulation \n",
+    "We carefully apply the tangential trace to (1) and obtain the **electric field integral equation** (EFIE). The EFIE is a boundary integral equation for $\\boldsymbol j$: \n",
     "\n",
-    "$$ \\begin{array}{l c c c c} \\forall \\, \\boldsymbol v\\in H^{-\\frac12}(\\mathrm{div}_\\Gamma, \\Gamma): &  & \\displaystyle \\int\\limits_\\Gamma \\mathrm{SL}(\\boldsymbol j) \\cdot \\boldsymbol v \\, \\mathrm d s &=&  \\displaystyle \\int\\limits_\\Gamma \\boldsymbol m \\cdot  \\boldsymbol v \\, \\mathrm d s \\\\[2ex] & \\Rightarrow & \\mathrm{V}\\,\\mathrm j &=& \\mathrm{M}\\, \\mathrm m \\,. \\end{array} $$ \n",
-    "\n",
-    "In the enineering community, the approximation scheme is also known as **method of moments** (MoM) and the resulting equation for $\\boldsymbol j$ is called the **EFIE**, the electric field integral equation. "
+    "$$ \\forall \\, \\boldsymbol v\\in H^{-\\frac12}(\\mathrm{div}_\\Gamma, \\Gamma): \\quad \\displaystyle \\int\\limits_\\Gamma \\mathrm{SL}(\\boldsymbol j) \\cdot \\boldsymbol v \\, \\mathrm d s =  \\displaystyle \\int\\limits_\\Gamma \\boldsymbol m \\cdot  \\boldsymbol v \\, \\mathrm d s\\,. $$ "
    ]
   },
   {
@@ -150,63 +165,65 @@
    "source": [
     "The discretisation of the above variational formulation leads to a system of linear equations, ie\n",
     "\n",
-    "$$ V\\, \\mathrm j = \\mathrm{M} \\, \\mathrm m\\,,$$ \n",
+    "$$ \\mathrm V\\, \\mathrm j = \\mathrm{M} \\, \\mathrm m\\,,$$ \n",
     "\n",
-    "where the single layer operator $V$ on the left is a regular and symmetric matrix. Its assembly is declarative and close to their actual implementations. All contributions to the Maxwell layer potentials are derivates of the Helmholtz layer potentials and thus, we use the Helmholtz operators as building blocks."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ea385457-1e87-40f9-819d-9203aa52c828",
-   "metadata": {},
-   "source": [
-    "**Details**\n",
+    "where \n",
+    "- $\\mathrm V$ is the Maxwell single layer potential operator.\n",
+    "- $\\mathrm M$ is a mass matrix.\n",
     "\n",
-    "For a trial function $\\boldsymbol u_j \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ and a test function $\\boldsymbol v_i \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ the Maxwell single layer potential operator entry $V_{ij}$ can formally written as\n",
     "\n",
-    "$$ V_{ij} = \\kappa \\, \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol u_j(y) \\cdot \\boldsymbol v_i(x) \\, \\mathrm{d}s_x \\mathrm{d} s_x - \\frac{1}{\\kappa} \\int\\limits_\\Gamma \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi}\\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\mathrm{div}_\\Gamma \\boldsymbol u_i(y)\\,  \\mathrm{div}_\\Gamma \\boldsymbol v_i(x)\\, \\mathrm{d}\\sigma_y\\,\\mathrm d s_x\\,. $$ \n",
-    "\n",
-    "The two contributions are derivates of the Helmholtz single layer potential operator and may be implemented as such:   \n",
+    "The **Maxwell single layer potential operator** $\\mathrm V$ is a derivate of the Helmholtz single layer operator (details given below) and thus, in NGSBEM we use the Helmholtz operators as building blocks for Maxwell operator: \n",
     "\n",
     "```\n",
-    "V = kappa * (HelmholtzSL(u*ds, kappa)*v*ds - 1/kappa * HelmholtzSL(div(u)*ds, kappa)*div(v)*ds\n",
-    "```\n"
+    "V = kappa * HelmholtzSL(u*ds, kappa)*v*ds\n",
+    "    - 1/kappa * HelmholtzSL(div(u)*ds, kappa)*div(v)*ds\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "5da7bba5-fe7a-4b35-814e-50f380c0c338",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rhs = LinearForm( m * vHDiv.Trace() *ds(bonus_intorder=3) ).Assemble()  # <H(curl_Gamma), H(div_Gamma)> "
+    "rhs = LinearForm( m * vHDiv.Trace()\n",
+    "                 *ds(bonus_intorder=3) ).Assemble()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "86468414-ef61-462e-a97d-6dbd0e1f5098",
    "metadata": {},
    "outputs": [],
    "source": [
     "with TaskManager(): \n",
-    "    V1 = HelmholtzSL( uHDiv.Trace()*ds(bonus_intorder=6) , kappa) * vHDiv.Trace() * ds(bonus_intorder=6)\n",
-    "    V2 = HelmholtzSL( div(uHDiv.Trace()) * ds(bonus_intorder=6), kappa) * div(vHDiv.Trace()) * ds(bounus_intorder=6)\n",
+    "    V1 = HelmholtzSL( \n",
+    "            uHDiv.Trace()*ds(bonus_intorder=6), \n",
+    "            kappa\n",
+    "        )*vHDiv.Trace()*ds(bonus_intorder=6)\n",
+    "    V2 = HelmholtzSL( \n",
+    "            div(uHDiv.Trace())*ds(bonus_intorder=6), \n",
+    "            kappa\n",
+    "        )*div(vHDiv.Trace())*ds(bonus_intorder=6)\n",
     "    V = kappa * V1.mat - 1/kappa * V2.mat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "0547ded5-a9f5-4515-9ad5-3b5dc006549d",
    "metadata": {},
    "outputs": [],
    "source": [
     "j = GridFunction(fesHDiv)\n",
-    "pre = BilinearForm( uHDiv.Trace() * vHDiv.Trace() *ds ).Assemble().mat.Inverse(freedofs=fesHDiv.FreeDofs()) \n",
+    "pre = BilinearForm( \n",
+    "        uHDiv.Trace() * vHDiv.Trace()*ds \n",
+    "                  ).Assemble().mat.Inverse(freedofs=fesHDiv.FreeDofs()) \n",
     "with TaskManager():\n",
-    "    CG(mat = V, pre=pre, rhs = rhs.vec, sol=j.vec, tol=1e-8, maxsteps=500, initialize=False, printrates=False)"
+    "    CG(mat = V, pre=pre, rhs = rhs.vec, sol=j.vec, tol=1e-8, \n",
+    "       maxsteps=500, initialize=False, printrates=False)"
    ]
   },
   {
@@ -234,7 +251,7 @@
    "id": "ab4aa5bb-60c9-4fdd-90ec-c4d5e228d8b8",
    "metadata": {},
    "source": [
-    "**Evaluation of the Scattered Field**\n",
+    "**Evaluation of the Solution**\n",
     "\n",
     "Define the geometry of the receiver, generate a mesh and evaluate the scattered field $\\boldsymbol E$.\n",
     "\n",
@@ -248,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sphere \n",
+    "# sphere (note that the potential evaluation does not yet evaluate the full SL)\n",
     "order = 3\n",
     "screen = Sphere( (0,0,0), 20)\n",
     "mesh_screen = Mesh( OCCGeometry(screen).GenerateMesh(maxh=1, perfstepsend=meshing.MeshingStep.MESHSURFACE)).Curve(4)\n",
@@ -292,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plane screen \n",
+    "# plane screen (note that the potential evaluation does not yet evaluate the full SL)\n",
     "screen = WorkPlane(Axes( (0,0,-3.5), Z, X)).RectangleC(20,20).Face()\n",
     "mesh_screen = Mesh( OCCGeometry(screen).GenerateMesh(maxh=1)).Curve(1)\n",
     "fes_screen = HCurl(mesh_screen, order=3, complex=True)\n",
@@ -308,6 +325,18 @@
    "outputs": [],
    "source": [
     "Draw( E_screen, mesh_screen, draw_vol=False, order=3, min=0, max=0.1, animate_complex=True);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca065dad-cd73-465b-a9e3-beb5ae391cd1",
+   "metadata": {},
+   "source": [
+    "**Details: Explicit Representation of the Maxwell Single Layer Potential**\n",
+    "\n",
+    "For a trial function $\\boldsymbol u_j \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ and a test function $\\boldsymbol v_i \\in H^{-\\frac12}(\\mathrm{div}_\\Gamma,\\Gamma)$ the Maxwell single layer potential operator entry $V_{ij}$ can formally written as\n",
+    "\n",
+    "$$ \\begin{array}{rcl} V_{ij} &=& \\kappa \\, \\displaystyle \\int\\limits_\\Gamma \\underbrace{ \\displaystyle \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi} \\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\boldsymbol u_j(y) \\cdot \\boldsymbol v_i(x) \\, \\mathrm{d}s_x}_{\\displaystyle{\\mathrm{HelmholtzSL}(\\boldsymbol v_i) } }  \\mathrm{d} s_x \\\\ && \\quad - \\; \\frac{1}{\\kappa} \\displaystyle \\int\\limits_\\Gamma \\underbrace{ \\displaystyle \\int\\limits_\\Gamma \\displaystyle{ \\frac{1}{4\\,\\pi}\\, \\frac{e^{i\\,\\kappa\\,\\|x-y\\|}}{\\| x-y\\|} } \\, \\mathrm{div}_\\Gamma \\boldsymbol u_j(y) }_{\\displaystyle{ \\mathrm{HelmholtzSL}(\\mathrm{div}_\\Gamma(\\boldsymbol u_j) } } \\,  \\mathrm{div}_\\Gamma \\boldsymbol v_i(x)\\, \\mathrm{d}\\sigma_y\\,\\mathrm d s_x\\,. \\end{array} $$  "
    ]
   },
   {
