--- a/demos/Maxwell_Mixed.ipynb
+++ b/demos/Maxwell_Mixed.ipynb
@@ -40,9 +40,9 @@
    "source": [
     "Consider the mixed problem:\n",
     "\n",
-    "|  |  |  |\n",
-    "| -|--|- |\n",
-    "| $ \\begin{array}{l rcl r} & \\mathrm{curl}\\,\\mathrm{curl} \\boldsymbol E - \\kappa^2 \\boldsymbol E &=& \\boldsymbol 0  &\\mathrm{in}\\; \\Omega^c \\,,\\\\ \\textnormal{Dirichlet condition} & \\gamma_R \\boldsymbol E &=& \\boldsymbol m & \\mathrm{on}\\; \\Gamma_0\\,,\\\\ \\textnormal{Neumann condition} & \\gamma_N \\boldsymbol E &=&  \\boldsymbol j & \\mathrm{on}\\; \\Gamma_1\\,, \\\\ \\textnormal{radiation condition} & \\| \\mathrm{curl}\\boldsymbol E \\times \\dfrac{x}{\\|x\\|} - i \\omega\\epsilon \\boldsymbol E(x)\\| &=& \\mathcal O(1/\\|x\\|^2), & \\|x\\|\\to \\infty\\,. \\end{array} $   | $\\quad\\quad\\quad$  | ![](resources/BEM_Mixed.png)  |\n",
+    "|  |  | \n",
+    "|:-:|:-:|\n",
+    "| $ \\begin{array}{l rcl r} & \\mathrm{curl}\\,\\mathrm{curl} \\boldsymbol E - \\kappa^2 \\boldsymbol E &=& \\boldsymbol 0  &\\mathrm{in}\\; \\Omega^c \\,,\\\\ \\textnormal{Dirichlet condition} & \\gamma_R \\boldsymbol E &=& \\boldsymbol m & \\mathrm{on}\\; \\Gamma_0\\,,\\\\ \\textnormal{Neumann condition} & \\gamma_N \\boldsymbol E &=&  \\boldsymbol j & \\mathrm{on}\\; \\Gamma_1\\,, \\\\ \\textnormal{radiation condition} & \\| \\mathrm{curl}\\boldsymbol E \\times \\dfrac{x}{\\|x\\|} - i \\omega\\epsilon \\boldsymbol E(x)\\| &=& \\mathcal O(1/\\|x\\|^2), & \\|x\\|\\to \\infty\\,. \\end{array} \\quad\\quad\\quad$  | ![](resources/BEM_Mixed.png)  |\n",
     "\n",
     "- lower half sphere: Dirichlet boundary with given $\\gamma_D \\, E = \\boldsymbol m$ \n",
     "- upper half sphere: Neumann boundary with given $\\gamma_N \\, E = \\boldsymbol j$"
@@ -74,7 +74,7 @@
     "h = 0.5\n",
     "order = 3\n",
     "mesh = Mesh( OCCGeometry(shape).GenerateMesh(maxh=h, perfstepsend=meshing.MeshingStep.MESHSURFACE)).Curve(order)\n",
-    "#Draw (mesh);"
+    "Draw (mesh);"
    ]
   },
   {
@@ -162,8 +162,12 @@
     "n = specialcf.normal(3)\n",
     "mjexa = GridFunction(fes)\n",
     "mj = GridFunction(fes)\n",
-    "mjexa.components[0].Set( Cross( Cross(n, E), n) , definedon=mesh.Boundaries(\".*\"), dual=True) # Hcurl, gamma_R = (nxE)xn\n",
-    "mjexa.components[1].Set( 1/kappa*Cross(n,curlE) , definedon=mesh.Boundaries(\".*\"), dual=True) # Hdiv, gamma_N = 1/k nx curl E"
+    "mjexa.components[0].Set( Cross( Cross(n, E), n) , \n",
+    "                        definedon=mesh.Boundaries(\".*\"), \n",
+    "                        dual=True) # Hcurl, gamma_R = (nxE)xn\n",
+    "mjexa.components[1].Set( 1/kappa*Cross(n,curlE) , \n",
+    "                        definedon=mesh.Boundaries(\".*\"), \n",
+    "                        dual=True) # Hdiv, gamma_N = 1/k nx curl E"
    ]
   },
   {
@@ -181,7 +185,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mj.components[0].Set( mjexa.components[0], definedon=mesh.Boundaries(\"dirichlet\"), dual=True) # given Dirichlet data\n",
+    "mj.components[0].Set( mjexa.components[0], \n",
+    "                     definedon=mesh.Boundaries(\"dirichlet\"), \n",
+    "                     dual=True) # given Dirichlet data\n",
     "Draw (Norm(mj.components[0]), mesh, draw_vol=False, order=3);"
    ]
   },
@@ -200,7 +206,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mj.components[1].Set( mjexa.components[1], definedon=mesh.Boundaries(\"neumann\"), dual=True) # given Neumann data\n",
+    "mj.components[1].Set( mjexa.components[1], \n",
+    "                     definedon=mesh.Boundaries(\"neumann\"), \n",
+    "                     dual=True) # given Neumann data\n",
     "Draw (Norm(mj.components[1]), mesh, draw_vol=False, order=3);"
    ]
   },
@@ -273,7 +281,7 @@
     "bfpre = BilinearForm(uHDiv.Trace() * vHDiv.Trace() *ds + uHCurl.Trace() * vHCurl.Trace() *ds).Assemble()\n",
     "pre = bfpre.mat.Inverse(freedofs=fes.FreeDofs())\n",
     "with TaskManager():\n",
-    "    sol = GMRes(A=lhs, b=rhs, pre=pre, maxsteps=3000, tol=1e-8)"
+    "    sol = GMRes(A=lhs, b=rhs, pre=pre, maxsteps=3000, tol=1e-8, printrates=False)"
    ]
   },
   {
